--- a/css/main.css
+++ b/css/main.css
@@ -26,18 +26,21 @@ p {
 }
 p a {
   /* text-decoration: underline */
-  color: #008AFF;
+  color: white;
+  opacity: 0.5;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
-  color: #008AFF;
+  color: white;
+  opacity: 0.5;
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: white;
+  opacity: 0.5;
 }
 blockquote {
   color: #808080;
@@ -109,7 +112,7 @@ img {
 
 .navbar-custom {
   background: #F5F5F5;
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid #080808;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   {% if site.navbar-col %}
   background: {{ site.navbar-col }};
@@ -129,15 +132,15 @@ img {
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: white;
-  opacity: 0.5;
+  color: #9d9d9d;  
 }
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #9d9d9d;
+  color: white;
+  opacity: 0.5;
 }
 
 .navbar-custom .navbar-brand-logo {
@@ -267,7 +270,7 @@ img {
   }
   .navbar-custom .nav .navlinks-container .navlinks-children a {
     padding-left: 10px;
-    border: 1px solid #eaeaea;
+    border: 1px solid #080808;
     border-width: 0 1px 1px;
   }
 }
@@ -277,7 +280,7 @@ img {
 footer {
   padding: 30px 0;
   background: #F5F5F5;
-  border-top: 1px #EAEAEA solid;
+  border-top: 1px #080808 solid;
   margin-top: 50px;
   font-size: 14px;
   {% if site.footer-col %}
