Updated sub-title colours.

--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,8 @@ footer .theme-by {
   margin-top: 0;
 }
 .post-preview .post-subtitle {
+  color: white;
+  opacity: 0.5;
   margin: 0;
   font-weight: 300;
   margin-bottom: 10px;
