--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
 		  
 		  {% if include.type == "post" %}
 		    {% if page.author %}
-		    <span class="post-meta">Written by {{ page.author }}</span>
+		    <span class="post-meta">Written by {{ page.author }}</span><br />
 		    {% endif %}
 		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
 		  {% endif %}
@@ -65,7 +65,7 @@
 		  
 		  {% if include.type == "post" %}
 		    {% if page.author %}
-		    <span class="post-meta">Written by {{ page.author }}</span>
+		    <span class="post-meta">Written by {{ page.author }}</span><br />
 		    {% endif %}
 		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
 		  {% endif %}
