--- a/css/main.css
+++ b/css/main.css
@@ -208,10 +208,11 @@ img {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
-.navbar-custom .avatar-container  .avatar-img {
+.navbar-custom .avatar-container .avatar-img {
   width: 100%;
   border-radius: 50%;
   display: block;
+  opacity: 1.0;
 }
 
 .navbar-custom.top-nav-short .avatar-container{
@@ -235,8 +236,9 @@ img {
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
   }
 
-  .navbar-custom .avatar-container  .avatar-img {
+  .navbar-custom .avatar-container .avatar-img {
     width: 100%;
+    opacity: 1.0;
   }
 }
 
