--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,7 @@ img {
   margin-top: -25px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
+  opacity: 1;
   width: 100%;
   border-radius: 50%;
   margin-left: -50%;
@@ -220,16 +221,19 @@ img {
 }
 
 .navbar-custom.top-nav-expanded .avatar-container  {
+  opacity: 1.0;
   display: none;
 }
 
 @media only screen and (min-width: 768px) {
   .navbar-custom .avatar-container {
+    opacity: 1.0;
     width: 100px;
     margin-top: -50px;
   }
 
   .navbar-custom .avatar-container  .avatar-img-border {
+  	opacity: 1.0;
     width: 100%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
