--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -203,10 +203,7 @@
           {% endif %}
         </ul>
         <p class="copyright text-muted">
-		  {{ site.author.name }}
-		  &nbsp;&bull;&nbsp;
-		  {{ site.time | date: '%Y' }}
-
+		  Copyright &copy; {{ site.time | date: '%Y' }} {{ site.author.name }} All rights reserved
 		  {% if site.url-pretty %}
 		  &nbsp;&bull;&nbsp;
 		  <a href="{{ site.url }}">{{ site.url-pretty }}</a>
@@ -215,7 +212,7 @@
 	        <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
 		  Theme by
-		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>, edited and maintained by v16 Studios.
 		</p>
       </div>
     </div>
