--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@
 	{% if page.postimage and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="{{ site.url }} ">
+	    <a class="avatar-img" href="{{ site.url }} ">
 	      <img class="avatar-img" src="{{ page.postimage | prepend: site.baseurl | replace: '//', '/' }}" />
 		</a>
 	  </div>
@@ -48,7 +48,7 @@
 	{% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="{{ site.url }} ">
+	    <a class="avatar-img" href="{{ site.url }} ">
 	      <img class="avatar-img" src="{{ site.avatar | prepend: site.baseurl | replace: '//', '/' }}" />
 		</a>
 	  </div>
