--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,9 @@ html, body {
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
-  color: #333;
+  color: white;
   position: relative;
-  background: #529e78;
+  background: #222;
   {% if site.page-col %}
   background: {{ site.page-col }};
   {% endif %}
@@ -32,7 +32,6 @@ p {
 p a {
   /* text-decoration: underline */
   color: white;
-  opacity: 0.5;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -40,16 +39,17 @@ h1,h2,h3,h4,h5,h6 {
 }
 a {
   color: white;
-  opacity: 0.5;
 }
 a:hover,
 a:focus {
   color: white;
   opacity: 0.75;
 }
+a h2:hover {
+  opacity: 0.75;
+}
 blockquote {
   color: white;
-  opacity: 0.5;
   font-style: italic;
 }
 blockquote p:first-child {
@@ -83,24 +83,20 @@ hr.small {
 
 ::-moz-selection {
   color: white;
-  opacity: 0.5;
   text-shadow: none;
   background: #0085a1;
 }
 ::selection {
   color: white;
-  opacity: 0.5;
   text-shadow: none;
   background: #0085a1;
 }
 img::selection {
   color: white;
-  opacity: 0.5;
   background: transparent;
 }
 img::-moz-selection {
   color: white;
-  opacity: 0.5;
   background: transparent;
 }
 
@@ -154,7 +150,7 @@ img {
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
   color: white;
-  opacity: 0.5;
+  opacity: 0.75;
 }
 
 .navbar-custom .navbar-brand-logo {
@@ -190,7 +186,6 @@ img {
 }
 
 .navbar-custom .avatar-container {
-  opacity: 1;
   position: absolute;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
@@ -200,7 +195,6 @@ img {
   margin-top: -25px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
-  opacity: 1;
   width: 100%;
   border-radius: 50%;
   margin-left: -50%;
@@ -213,7 +207,6 @@ img {
   width: 100%;
   border-radius: 50%;
   display: block;
-  opacity: 1.0;
 }
 
 .navbar-custom.top-nav-short .avatar-container{
@@ -221,19 +214,16 @@ img {
 }
 
 .navbar-custom.top-nav-expanded .avatar-container  {
-  opacity: 1.0;
   display: none;
 }
 
 @media only screen and (min-width: 768px) {
   .navbar-custom .avatar-container {
-    opacity: 1.0;
     width: 100px;
     margin-top: -50px;
   }
 
   .navbar-custom .avatar-container  .avatar-img-border {
-  	opacity: 1.0;
     width: 100%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
@@ -242,7 +232,6 @@ img {
 
   .navbar-custom .avatar-container .avatar-img {
     width: 100%;
-    opacity: 1.0;
   }
 }
 
@@ -314,7 +303,6 @@ footer {
 
 footer a {
   color: white;
-  opacity: 0.5;
 }
 
 footer .list-inline {
@@ -362,39 +350,35 @@ footer .theme-by {
 
 .post-preview a {
   text-decoration: none;
-  color: #333;
-  opacity: 1;
+  color: gray;
 }
 
 .post-preview a:focus {
   text-decoration: none;
   color: white;
-  opacity: 1;
+  opacity: 0.75;
 }
 
 .post-preview a:hover {
   text-decoration: none;
   color: white;
-  opacity: 0.5;
+  opacity: 0.75;
 }
 
 .post-preview .post-title {
   color: white;
-  opacity: 0.5;
   font-size: 30px;
   margin-top: 0;
 }
 .post-preview .post-subtitle {
-  color: white;
-  opacity: 0.5;
+  color: lightgray;
   margin: 0;
   font-weight: 300;
   margin-bottom: 10px;
 }
 .post-preview .post-meta,
 .post-heading .post-meta {
-  color: #333;
-  opacity: 0.5;
+  color: gray;
   font-size: 18px;
   font-style: italic;
   margin: 0 0 10px;
@@ -438,22 +422,21 @@ footer .theme-by {
 
 .blog-tags {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
-  opacity: 0.5;
+  color: gray;
   font-size: 15px;
   margin-bottom: 30px;
 }
 
 .blog-tags a {
-  color: #333;
-  opacity: 0.5;
+  color: gray;
   text-decoration: none;
   padding: 0px 5px;
 }
 
 .blog-tags a:hover {
   border-radius: 2px;
-  color: #333;
+  color: gray;
+  opacity: 0.75;
   background-color: #CCC;
 }
 
@@ -529,6 +512,7 @@ footer .theme-by {
 }
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
+  color: darkgray;
   font-size: 27px;
   line-height: 1.1;
   display: block;
@@ -542,6 +526,8 @@ footer .theme-by {
 .intro-header.big-img .page-heading .page-subheading,
 .intro-header.big-img .post-heading .post-subheading {
   font-weight: 400;
+  color: white;
+  text-shadow: 0px 0px 5px #000;
 }
 .intro-header.big-img .page-heading hr {
   box-shadow: 1px 1px 3px #000;
@@ -649,6 +635,7 @@ footer .theme-by {
 .pager li a:hover,
 .pager li a:focus {
   color: #FFF;
+  opacity: 0.75;
   background: #0085a1;
   border: 1px solid #0085a1;
 }
@@ -746,7 +733,7 @@ td.gutter {
 }
 
 .fa-inverse {
-  color: #333;
+  color: gray;
 }
 
 /* --- Notification boxes --- */
